--- a/src/Ritk/Ritk/CMakeLists.txt
+++ b/src/Ritk/Ritk/CMakeLists.txt
@@ -23,7 +23,7 @@ foreach( loop_var IN LISTS R_INCLUDE_DIR_MATCHES )
   include_directories( ${R_INCLUDE_DIR} )
 endforeach( loop_var )
 
-add_library( Ritk SHARED ${Ritk_SOURCE_DIR}/src/antsRegistration.cxx ${Ritk_SOURCE_DIR}/src/antsCommandLineParser.cxx ${Ritk_SOURCE_DIR}/src/antsCommandLineOption.cxx )
+add_library( Ritk SHARED MODULE ${Ritk_SOURCE_DIR}/src/antsRegistration.cxx ${Ritk_SOURCE_DIR}/src/antsCommandLineParser.cxx ${Ritk_SOURCE_DIR}/src/antsCommandLineOption.cxx )
 target_link_libraries( Ritk ${RCPP_LIB_DIR} ${R_LIB_DIR} ${ITK_LIBRARIES} )
-set_target_properties( Ritk PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE PREFIX "" )
+set_target_properties( Ritk PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE PREFIX "" BUNDLE TRUE BUNDLE_EXTENSION "so" )
 install( TARGETS Ritk DESTINATION . )
