More ANTS targets can be now called from R. Also, the following R functions are available: * ants_motion_estimation * ants_brain_extraction * ants_to_template * ants_compcorr * antsr_frequency_filtering

--- a/src/Ritk/Ritk/CMakeLists.txt
+++ b/src/Ritk/Ritk/CMakeLists.txt
@@ -2,6 +2,19 @@ cmake_minimum_required(VERSION 2.8)
 
 project(Ritk)
 
+if( NOT R_INCLUDE_DIR )
+  message( FATAL_ERROR "R_INCLUDE_DIR invalid. Perhaps R was not built as library." )
+endif( NOT R_INCLUDE_DIR )
+if( NOT RCPP_INCLUDE_DIR )
+  message( FATAL_ERROR "RCPP_INCLUDE_DIR invalid. Perhaps Rcpp has not been installed." )
+endif( NOT RCPP_INCLUDE_DIR )
+if( NOT R_LIB_DIR )
+  message( FATAL_ERROR "R_LIB_DIR invalid. Perhaps R was not built as library." )
+endif( NOT R_LIB_DIR )
+if( NOT RCPP_LIB_DIR )
+  message( FATAL_ERROR "RCPP_LIB_DIR invalid. Perhaps Rcpp has not been installed." )
+endif( NOT RCPP_LIB_DIR )
+
 # find and itk library; create shared object that interacts with it and link against it
 find_package(ITK REQUIRED)
 include( ${ITK_USE_FILE} )
@@ -36,7 +49,10 @@ ${Ritk_SOURCE_DIR}/src/ThresholdImage.cxx
 ${Ritk_SOURCE_DIR}/src/ImageMath.cxx
 # ants_to_template 
 ${Ritk_SOURCE_DIR}/src/ANTS.cxx
-${Ritk_SOURCE_DIR}/src/WarpTimeSeriesImageMultiTransform.cxx )
+${Ritk_SOURCE_DIR}/src/WarpTimeSeriesImageMultiTransform.cxx 
+# ants_compcorr
+${Ritk_SOURCE_DIR}/src/Atropos.cxx 
+${Ritk_SOURCE_DIR}/src/sccan.cxx )
 target_link_libraries( Ritk ${RCPP_LIB_DIR} ${R_LIB_DIR} ${ITK_LIBRARIES} )
 set_target_properties( Ritk PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE PREFIX "" )
 install( TARGETS Ritk DESTINATION . )
