--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,5 @@ Description: Package provides access to ANTs routines in R
 License: GPL (>=2)
 LazyLoad: yes
 Depends: Rcpp (>= 0.9.7.2) , signal , timeSeries , mFilter , MASS
-Suggests: oro.nifti , XML , bitops
+Suggests: oro.nifti
 LinkingTo: Rcpp
