--- a/src/ANTsR/ANTsR-src/CMakeLists.txt
+++ b/src/ANTsR/ANTsR-src/CMakeLists.txt
@@ -338,17 +338,17 @@ add_library( RantsImageClone MODULE ${ANTsR_SOURCE_DIR}/src/antsImageClone.cxx )
 target_link_libraries( RantsImageClone ${RCPP_LIB_DIR} ${R_LIB_DIR} ${ITK_LIBRARIES} )
 install( TARGETS RantsImageClone DESTINATION . )
 
-add_library( RantsBinaryThresholdImageFilter MODULE ${ANTsR_SOURCE_DIR}/src/antsBinaryThresholdImageFilter.cxx )
-target_link_libraries( RantsBinaryThresholdImageFilter ${RCPP_LIB_DIR} ${R_LIB_DIR} ${ITK_LIBRARIES} )
-install( TARGETS RantsBinaryThresholdImageFilter DESTINATION . )
+#add_library( RantsBinaryThresholdImageFilter MODULE ${ANTsR_SOURCE_DIR}/src/antsBinaryThresholdImageFilter.cxx )
+#target_link_libraries( RantsBinaryThresholdImageFilter ${RCPP_LIB_DIR} ${R_LIB_DIR} ${ITK_LIBRARIES} )
+#install( TARGETS RantsBinaryThresholdImageFilter DESTINATION . )
 
-add_library( RantsThresholdImageFilter MODULE ${ANTsR_SOURCE_DIR}/src/antsThresholdImageFilter.cxx )
-target_link_libraries( RantsThresholdImageFilter ${RCPP_LIB_DIR} ${R_LIB_DIR} ${ITK_LIBRARIES} )
-install( TARGETS RantsThresholdImageFilter DESTINATION . )
+#add_library( RantsThresholdImageFilter MODULE ${ANTsR_SOURCE_DIR}/src/antsThresholdImageFilter.cxx )
+#target_link_libraries( RantsThresholdImageFilter ${RCPP_LIB_DIR} ${R_LIB_DIR} ${ITK_LIBRARIES} )
+#install( TARGETS RantsThresholdImageFilter DESTINATION . )
 
-add_library( RantsPermuteAxesImageFilter MODULE ${ANTsR_SOURCE_DIR}/src/antsPermuteAxesImageFilter.cxx )
-target_link_libraries( RantsPermuteAxesImageFilter ${RCPP_LIB_DIR} ${R_LIB_DIR} ${ITK_LIBRARIES} )
-install( TARGETS RantsPermuteAxesImageFilter DESTINATION . )
+#add_library( RantsPermuteAxesImageFilter MODULE ${ANTsR_SOURCE_DIR}/src/antsPermuteAxesImageFilter.cxx )
+#target_link_libraries( RantsPermuteAxesImageFilter ${RCPP_LIB_DIR} ${R_LIB_DIR} ${ITK_LIBRARIES} )
+#install( TARGETS RantsPermuteAxesImageFilter DESTINATION . )
 
 add_library( RantsImageList MODULE ${ANTsR_SOURCE_DIR}/src/antsImageList.cxx )
 target_link_libraries( RantsImageList ${RCPP_LIB_DIR} ${R_LIB_DIR} ${ITK_LIBRARIES} )
